examples/v0.5/errors/condition_not_boolean.nova
if 10 {

    print("Invalid")

}

// Expected Error:
// Condition must evaluate to a Boolean value.